--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -90,9 +90,11 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build Native Image with GraalVM
         run: |
+          docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-shenzhen.aliyuncs.com
           cd /home/runner/work/KCloud-Platform-IoT/KCloud-Platform-IoT/laokou-cloud/laokou-gateway
           mvnd spring-boot:process-aot
           mvnd spring-boot:build-image -DskipTests
+          docker push registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-gateway-native:4.0.1-SNAPSHOT
       - name: Build Docker Image
         run: |
           # 登录阿里云镜像仓库
