--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -79,9 +79,9 @@ nacos.security.ignore.urls=/,/error,/**/*.css,/**/*.js,/**/*.html,/**/*.map,/**/
 # \u7981\u7528SpringBoot\u7684\u6570\u636E\u5E93\u81EA\u52A8\u88C5\u914D
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 # nacos\u670D\u52A1\u63A7\u5236\u53F0\u7AEF\u53E3
-nacos.console.port=8048
+nacos.console.port=${NACOS_CONSOLE_PORT:8048}
 # nacos\u670D\u52A1\u4E3B\u7AEF\u53E3
-nacos.server.main.port=8848
+nacos.server.main.port=${NACOS_SERVER_PORT:8848}
 # nacos\u670D\u52A1\u4E0A\u4E0B\u6587\u8DEF\u5F84
 nacos.server.contextPath=/nacos
 # nacos\u670D\u52A1\u63A7\u5236\u53F0\u4E0A\u4E0B\u6587\u8DEF\u5F84
